<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/margin_16">

    <ImageView
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/filter_title"
        style="@style/TextViewStyle"
        android:layout_margin="@dimen/margin_16"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:text="@string/filter_text"
        android:textSize="@dimen/text_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_close"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margin_8"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/filter_title" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_16"
        android:paddingBottom="@dimen/margin_12"
        app:layout_constraintBottom_toTopOf="@id/btn_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_close">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="@dimen/margin_8">

            <TextView
                android:id="@+id/txt_sort_by"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_8"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/sort_by_text"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_old_to_new"
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_12"
                    android:layout_weight="1"
                    android:button="@drawable/custom_radiobutton"
                    android:gravity="center"
                    android:text="@string/rb_old_to_new" />

                <RadioButton
                    android:id="@+id/rb_new_to_old"
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_12"
                    android:layout_weight="1"
                    android:button="@drawable/custom_radiobutton"
                    android:gravity="center"
                    android:text="@string/rb_new_to_old" />

                <RadioButton
                    android:id="@+id/rb_price_hight_to_low"
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_12"
                    android:layout_weight="1"
                    android:button="@drawable/custom_radiobutton"
                    android:gravity="center"
                    android:text="@string/rb_price_hight_to_low" />

                <RadioButton
                    android:id="@+id/rb_price_low_to_hight"
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_12"
                    android:layout_weight="1"
                    android:button="@drawable/custom_radiobutton"
                    android:gravity="center"
                    android:text="@string/rb_price_low_to_hight" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_8"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/txt_brand"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_8"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/brand_text" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:iconifiedByDefault="false"
                app:queryHint="Search " />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_brand"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:fadeScrollbars="false"
                android:overScrollMode="always"
                android:scrollbars="vertical" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_8"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/txt_model"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_8"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/model_text" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:iconifiedByDefault="false"
                app:queryHint="Search " />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_model"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:fadeScrollbars="false"
                android:overScrollMode="always"
                android:scrollbars="vertical" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_primary"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_margin="@dimen/margin_16"
        android:background="@drawable/bg_blue_button"
        android:fontFamily="@font/montserrat_regular"
        android:paddingHorizontal="@dimen/margin_36"
        android:text="@string/btn_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
