<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.view.MainFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/title_e_market"
            android:textColor="@color/white"
            android:textSize="@dimen/text_24" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_search"
        style="@style/EditTextStyle"
        android:layout_marginTop="@dimen/margin_14"
        android:drawableStart="@drawable/ic_search"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/hint_search"
        android:paddingVertical="@dimen/margin_8"
        android:paddingStart="@dimen/margin_12"
        android:paddingEnd="@dimen/margin_8"
        android:textSize="@dimen/text_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/txt_filter"
        style="@style/TextViewStyle"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_20"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/txt_filter"
        android:textSize="@dimen/text_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_search" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_select_filter"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_margin="@dimen/margin_16"
        android:background="@drawable/bg_gray"
        android:fontFamily="@font/montserrat_regular"
        android:paddingHorizontal="@dimen/margin_32"
        android:text="@string/btn_select_filter"
        android:textAllCaps="false"
        android:textSize="@dimen/text_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cards"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_4"
        android:layout_marginTop="@dimen/margin_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_select_filter" />

    <include
        android:id="@+id/no_data"
        layout="@layout/no_data"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_select_filter" />

</androidx.constraintlayout.widget.ConstraintLayout>