<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/margin_100">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/title_e_market"
                android:textColor="@color/white"
                android:textSize="@dimen/text_24" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_card"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_4"
            app:layout_constraintBottom_toTopOf="@+id/txt_total_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/txt_total_price"
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/total_text"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_18"
            app:layout_constraintBottom_toTopOf="@+id/txt_price"
            app:layout_constraintStart_toStartOf="@+id/txt_price" />

        <TextView
            android:id="@+id/txt_price"
            style="@style/TextViewStyle"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_16"
            android:fontFamily="@font/montserrat_semi_bold"
            android:textSize="@dimen/text_18"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_complete"
            style="@style/ButtonStyle"
            android:layout_marginEnd="@dimen/margin_8"
            android:background="@drawable/bg_blue_button"
            android:fontFamily="@font/montserrat_semi_bold"
            android:paddingHorizontal="@dimen/margin_40"
            android:text="@string/complete_text"
            android:textAllCaps="false"
            android:textSize="@dimen/text_18"
            app:layout_constraintBottom_toBottomOf="@+id/txt_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_total_price" />

        <include
            android:id="@+id/no_data"
            layout="@layout/no_data"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/btn_complete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>