<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/margin_40"
        app:layout_constraintBottom_toTopOf="@id/txt_price"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/go_back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_arrow_back" />

                <TextView
                    android:id="@+id/txt_header"
                    style="@style/TextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:text="@string/empty"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_24" />
            </androidx.appcompat.widget.Toolbar>

            <ImageView
                android:id="@+id/img_product"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginHorizontal="@dimen/margin_12"
                android:layout_marginTop="@dimen/margin_16"
                android:fontFamily="@font/montserrat_regular"
                android:src="@drawable/bg_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <ImageView
                android:id="@+id/img_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16"
                android:src="@drawable/ic_product_selected"
                app:layout_constraintEnd_toEndOf="@+id/img_product"
                app:layout_constraintTop_toTopOf="@+id/img_product" />

            <TextView
                android:id="@+id/txt_title"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/empty"
                android:textColor="@color/black"
                android:textSize="@dimen/text_24"
                app:layout_constraintStart_toStartOf="@+id/img_product"
                app:layout_constraintTop_toBottomOf="@+id/img_product" />

            <TextView
                android:id="@+id/txt_description"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginBottom="@dimen/margin_12"
                android:fontFamily="@font/montserrat_regular"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/txt_title"
                app:layout_constraintTop_toBottomOf="@+id/txt_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


    <TextView
        android:id="@+id/txt_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/txt_price"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_24"
        app:layout_constraintBottom_toTopOf="@id/price"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_100"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textColor="@color/black"
        android:textSize="@dimen/text_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_cart"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginEnd="@dimen/margin_16"
        android:background="@drawable/bg_blue_button"
        android:fontFamily="@font/montserrat_regular"
        android:paddingHorizontal="@dimen/margin_36"
        android:text="@string/btn_add_cart"
        app:layout_constraintBottom_toBottomOf="@id/price"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>